--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "react-context-api": "^1.0.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "uuid": "^10.0.0"
   }
